Update 103.1 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.1 Work on the command line/103.1 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.1 Work on the command line/103.1 Lesson 1.md
@@ -1,13 +1,134 @@
-# 102.3 Урок 1
+# 103.1 Урок 1
 
 | **Сертификат:** | LPIC-1                                    |
 |:----------------|:------------------------------------------|
 | **Версия:**     | 5.0                                       |
-| **Тема:**       | 102 Установка Linux и управление пакетами |
-| **Цель:**       | 102.3 Управление общедоступными библиотеками 
-| **Урок:**       | 1 из 1                                    |
+| **Тема:**       | 103 Команды GNU и Unix                    |
+| **Цель:**       | 103.1 Работа в командной строке           |
+| **Урок:**       | 1 из 2                                    |
 
 
 ## Введение
 
 Новички в мире администрирования Linux и оболочки Bash часто чувствуют себя немного потерянными без успокаивающих удобств графического интерфейса. Они используются для доступа по щелчку правой кнопкой мыши к визуальным подсказкам и контекстной информации, которые предоставляют утилиты графического файлового менеджера. Поэтому важно быстро изучить и освоить относительно небольшой набор инструментов командной строки, с помощью которых вы можете мгновенно использовать все данные, предлагаемые вашим старым графическим интерфейсом, и многое другое.
+
+
+## Получение системной информации
+
+Когда вы смотрите на мигающий прямоугольник командной строки, ваш первый вопрос, вероятно, будет: «Где я?» Или, точнее, «Где я сейчас в файловой системе Linux и если, скажем, я создам новый файл, где он будет жить?» То, что вам нужно, это ваш текущий рабочий каталог, и команда `pwd` сообщит вам, что вы хотите знать:
+
+```console
+$ pwd
+/home/frank
+```
+
+Предположим, что Фрэнк в настоящее время вошел в систему и находится в своем домашнем каталоге: `/home/frank/`. Если Фрэнк создаст пустой файл с помощью команды `touch` без указания другого места в файловой системе, файл будет создан в `/home/frank/`. Вывод содержимого каталога с помощью `ls` покажет нам этот новый файл:
+
+```console
+$ touch newfile
+$ ls
+newfile
+```
+
+Помимо вашего местоположения в файловой системе, вам часто может понадобиться информация о системе Linux, которую вы используете. Это может включать точный номер выпуска вашего дистрибутива или версию ядра Linux, которая загружена в данный момент. Инструмент `uname` - это то, что вам нужно. И, в частности, `uname` с использованием опции `-a` («все»).
+
+```console
+$ uname -a
+Linux base 4.18.0-18-generic #19~18.04.1-Ubuntu SMP Fri Apr 5 10:22:13 UTC 2019 x86_64 x86_64 x86_64 GNU/Linux
+```
+
+Здесь uname показывает, что на машине Фрэнка установлено ядро Linux версии 4.18.0 и работает Ubuntu 18.04 на 64-битном (`x86_64`) процессоре.
+
+
+## Получение информации о команде
+
+Вы часто будете сталкиваться с документацией о командах Linux, с которыми вы еще не знакомы. Сама командная строка предлагает всевозможную полезную информацию о том, что делают команды и как их эффективно использовать. Возможно, самая полезная информация находится во многих файлах системы `man`. 
+
+Как правило, разработчики Linux пишут файлы `man` и распространяют их вместе с созданными ими утилитами. Файлы man - это хорошо структурированные документы, содержимое которых интуитивно разделено стандартными заголовками разделов. Набрав `man`, за которым следует имя команды, вы получите информацию, которая включает имя команды, краткое описание использования, более подробное описание и некоторые важные исторические данные и сведения о лицензировании. Вот пример:
+
+```console
+$ man uname
+UNAME(1)             User Commands            UNAME(1)
+NAME
+   uname - print system information
+SYNOPSIS
+   uname [OPTION]...
+DESCRIPTION
+   Print certain system information.  With no OPTION, same as -s.
+   -a, --all
+      print  all information, in the following order, except omit -p
+      and -i if unknown:
+   -s, --kernel-name
+      print the kernel name
+   -n, --nodename
+      print the network node hostname
+   -r, --kernel-release
+      print the kernel release
+   -v, --kernel-version
+      print the kernel version
+   -m, --machine
+      print the machine hardware name
+   -p, --processor
+      print the processor type (non-portable)
+   -i, --hardware-platform
+      print the hardware platform (non-portable)
+   -o, --operating-system
+      print the operating system
+   --help display this help and exit
+   --version
+      output version information and exit
+AUTHOR
+   Written by David MacKenzie.
+REPORTING BUGS
+   GNU coreutils online help: <http://www.gnu.org/software/coreutils/>
+   Report uname translation bugs to
+   <http://translationproject.org/team/>
+COPYRIGHT
+   Copyright©2017 Free Software Foundation, Inc. License  GPLv3+: GNU
+   GPL version 3 or later <http://gnu.org/licenses/gpl.html>.
+   This is free software: you are free to change and redistribute it.
+   There is NO WARRANTY, to the extent permitted by law.
+SEE ALSO
+   arch(1), uname(2)
+   Full documentation at: <http://www.gnu.org/software/coreutils/uname>
+   or available locally via: info '(coreutils) uname invocation'
+GNU coreutils 8.28       January 2018             UNAME(1)
+```
+
+`man` работает только тогда, когда вы даете ему точное имя команды. Если, однако, вы не уверены в названии команды, которая вам нужна, вы можете использовать команду `apropos` для поиска по именам и описаниям страниц руководства. Предполагая, например, что вы не можете вспомнить, что `uname` даст вам текущую версию ядра Linux, вы можете передать слово `kernel` в `apropros`. Вы, вероятно, получите много строк вывода, но они должны включать следующее:
+
+```console
+$ apropos kernel
+systemd-udevd-kernel.socket (8) - Device event managing daemon
+uname (2)            - get name and information about current kernel
+urandom (4)          - kernel random number source devices
+```
+
+Если вам не нужна полная документация по команде, вы можете быстро получить основные данные о команде, используя `type`. В этом примере `type` используется для одновременного запроса четырех отдельных команд. Результаты показывают нам, что `cp` («копия») - это программа, которая находится в `/bin/cp`, а `kill` (изменение состояния запущенного процесса) - это встроенная оболочка - это означает, что на самом деле она является частью самой оболочки Bash:
+
+```console
+$ type uname cp kill which
+uname is hashed (/bin/uname)
+cp is /bin/cp
+kill is a shell builtin
+which is /usr/bin/which
+```
+
+Обратите внимание, что `uname` не только является обычной двоичной командой, такой как `cp`, но и «хешируется». Это связано с тем, что Фрэнк недавно использовал `uname`, и для повышения эффективности системы он был добавлен в хеш-таблицу, чтобы сделать ее более доступной при следующем запуске. Если бы он запустил `type uname` после загрузки системы, Фрэнк обнаружил бы, что этот `type` снова описывает `uname` как обычный двоичный файл.
+
+>Более быстрый способ очистить хеш-таблицу - запустить команду `hash -d`.
+
+Иногда - особенно при работе с автоматическими скриптами - вам понадобится более простой источник информации о команде. Команда `which`, которую отслеживала наша предыдущая команда `type`, не вернет ничего, кроме абсолютного местоположения команды. В этом примере обнаруживаются команды `uname` и `which`.
+
+```console
+$ which uname which
+/bin/uname
+/usr/bin/which
+```
+
+>Если вы хотите отобразить информацию о «встроенных» командах, вы можете использовать команду `help`.
+
+
+## Использование истории команд
+
+
