Update 103.1 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.1 Work on the command line/103.1 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.1 Work on the command line/103.1 Lesson 1.md
@@ -131,4 +131,45 @@ $ which uname which
 
 ## Использование истории команд
 
+Вы часто будете внимательно изучать правильное использование команды и успешно запускать ее вместе со сложной цепочкой опций и аргументов. Но что происходит через несколько недель, когда вам нужно запустить ту же команду с теми же параметрами и аргументами, но вы не можете вспомнить детали? Вместо того, чтобы начинать исследование заново с нуля, вы часто сможете восстановить исходную команду, используя `history`. 
 
+Набрав `hisyoty` вернет самые последние команды, которые вы выполнили, с самыми последними из тех, которые появлялись последними. Вы можете легко выполнить поиск по этим командам, подключив определенную строку к команде `grep`. В этом примере будет выполняться поиск любой команды, содержащей текст `bash_history`:
+
+```console
+$ history | grep bash_history
+1605 sudo find /home -name ".bash_history" | xargs grep sudo
+```
+
+Здесь возвращается одна команда с порядковым номером 1605. 
+
+И, говоря о `bash_history`, на самом деле это имя скрытого файла, который вы должны найти в домашнем каталоге вашего пользователя. Поскольку это скрытый файл (обозначенный точкой перед именем файла), он будет виден только при перечислении содержимого каталога с помощью `ls` с аргументом `-a`:
+
+```console
+$ ls /home/frank
+newfile
+$ ls -a /home/frank
+.  ..  .bash_history  .bash_logout  .bashrc  .profile  .ssh  newfile
+```
+
+Что находится в файле `.bash_history`? Посмотрите сами: вы увидите сотни и сотни своих последних команд. Однако вы можете удивиться, обнаружив, что некоторые из ваших последних команд отсутствуют. Это потому, что, хотя они мгновенно добавляются в базу данных динамической истории, последние добавления в вашу историю команд не записываются в файл `.bash_history` до тех пор, пока вы не выйдете из сеанса. 
+
+Вы можете использовать содержимое истории, чтобы сделать работу с командной строкой намного быстрее и эффективнее, используя клавиши со стрелками вверх и вниз на клавиатуре. Многократное нажатие клавиши «вверх» заполнит командную строку последними командами. Когда вы дойдете до того, которое хотите выполнить во второй раз, вы можете запустить его, нажав Enter. Это упрощает вызов и, при желании, изменение команд несколько раз во время сеанса оболочки.
+
+
+# Упражнения для закрепления
+
+
+
+# Упражнения на размышления
+
+
+
+# Резюме
+
+
+
+# Ответы на упражнения для закрепления
+
+
+
+# Ответы на упражнения для размышления
