Update 103.1 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.1 Work on the command line/103.1 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.1 Work on the command line/103.1 Lesson 1.md
@@ -10,12 +10,12 @@
 
 ## Введение
 
-Новички в мире администрирования Linux и оболочки Bash часто чувствуют себя немного потерянными без успокаивающих удобств графического интерфейса. Они используются для доступа по щелчку правой кнопкой мыши к визуальным подсказкам и контекстной информации, которые предоставляют утилиты графического файлового менеджера. Поэтому важно быстро изучить и освоить относительно небольшой набор инструментов командной строки, с помощью которых вы можете мгновенно использовать все данные, предлагаемые вашим старым графическим интерфейсом, и многое другое.
+Новички в мире администрирования Linux и оболочки Bash часто чувствуют себя немного потерянными без удобного графического интерфейса. Они пользовались визуальными подсказками  и контекстной информацией доступной по щелчку правой кнопкой мыши, которые предоставляют утилиты графического файлового менеджера. Поэтому важно быстро изучить и освоить относительно небольшой набор инструментов командной строки, с помощью которых вы можете мгновенно использовать все данные, предлагаемые вашим старым графическим интерфейсом, и многое другое.
 
 
 ## Получение системной информации
 
-Когда вы смотрите на мигающий прямоугольник командной строки, ваш первый вопрос, вероятно, будет: «Где я?» Или, точнее, «Где я сейчас в файловой системе Linux и если, скажем, я создам новый файл, где он будет жить?» То, что вам нужно, это ваш текущий рабочий каталог, и команда `pwd` сообщит вам, что вы хотите знать:
+Когда вы смотрите на мигающий прямоугольник командной строки, ваш первый вопрос, вероятно, будет: «Где я?» Или, точнее, «Где я сейчас в файловой системе Linux и если, скажем, я создам новый файл, где он будет жить?» То, что вам нужно, это ваш *текущий рабочий каталог*, и команда `pwd` сообщит вам, что вы хотите знать:
 
 ```console
 $ pwd
@@ -37,7 +37,7 @@ $ uname -a
 Linux base 4.18.0-18-generic #19~18.04.1-Ubuntu SMP Fri Apr 5 10:22:13 UTC 2019 x86_64 x86_64 x86_64 GNU/Linux
 ```
 
-Здесь uname показывает, что на машине Фрэнка установлено ядро Linux версии 4.18.0 и работает Ubuntu 18.04 на 64-битном (`x86_64`) процессоре.
+Здесь `uname` показывает, что на машине Фрэнка установлено ядро Linux версии 4.18.0 и работает Ubuntu 18.04 на 64-битном (`x86_64`) процессоре.
 
 
 ## Получение информации о команде
