Update 103.1 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.1 Work on the command line/103.1 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.1 Work on the command line/103.1 Lesson 1.md
@@ -42,9 +42,9 @@ Linux base 4.18.0-18-generic #19~18.04.1-Ubuntu SMP Fri Apr 5 10:22:13 UTC 2019 
 
 ## Получение информации о команде
 
-Вы часто будете сталкиваться с документацией о командах Linux, с которыми вы еще не знакомы. Сама командная строка предлагает всевозможную полезную информацию о том, что делают команды и как их эффективно использовать. Возможно, самая полезная информация находится во многих файлах системы `man`. 
+Вы часто будете сталкиваться с документацией о командах Linux, с которыми вы еще не знакомы. Сама командная строка предлагает всевозможную полезную информацию о том, что делают команды и как их эффективно использовать. Возможно, самая полезная информация находится во многих файлах `man` системы. 
 
-Как правило, разработчики Linux пишут файлы `man` и распространяют их вместе с созданными ими утилитами. Файлы man - это хорошо структурированные документы, содержимое которых интуитивно разделено стандартными заголовками разделов. Набрав `man`, за которым следует имя команды, вы получите информацию, которая включает имя команды, краткое описание использования, более подробное описание и некоторые важные исторические данные и сведения о лицензировании. Вот пример:
+Как правило, разработчики Linux пишут `man` файлы и распространяют их вместе с созданными ими утилитами. `man` файлы - это хорошо структурированные документы, содержимое которых интуитивно разделено стандартными заголовками разделов. Набрав `man`, за которым следует имя команды, вы получите информацию, которая включает имя команды, краткое описание использования, более подробное описание и некоторые важные исторические данные и сведения о лицензировании. Вот пример:
 
 ```console
 $ man uname
