Update 103.1 Lesson 1.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.1 Work on the command line/103.1 Lesson 1.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.1 Work on the command line/103.1 Lesson 1.md
@@ -156,20 +156,82 @@ $ ls -a /home/frank
 Вы можете использовать содержимое истории, чтобы сделать работу с командной строкой намного быстрее и эффективнее, используя клавиши со стрелками вверх и вниз на клавиатуре. Многократное нажатие клавиши «вверх» заполнит командную строку последними командами. Когда вы дойдете до того, которое хотите выполнить во второй раз, вы можете запустить его, нажав Enter. Это упрощает вызов и, при желании, изменение команд несколько раз во время сеанса оболочки.
 
 
-# Упражнения для закрепления
+## Упражнения для закрепления
+
+1. Используйте систему `man`, чтобы определить, как сообщить `apropos` о выводе краткой команды, чтобы она выводила только краткое сообщение об использовании, а затем завершила работу. 
+
+2. Используйте систему `man`, чтобы определить, какая лицензия авторского права назначена команде `grep`.
 
 
+## Упражнения на размышления
 
-# Упражнения на размышления
+1. Определите аппаратную архитектуру и версию ядра Linux, используемую на вашем компьютере, в удобном для чтения формате вывода. 
 
+2. Распечатайте последние двадцать строк базы данных динамической истории и файла `.bash_history`, чтобы сравнить их. 
 
-
-# Резюме
-
-
-
-# Ответы на упражнения для закрепления
+3. Используйте инструмент `apropos`, чтобы определить страницу руководства, где вы найдете команду, которая вам понадобится для отображения размера подключенного физического блочного устройства в байтах, а не в мегабайтах или гигабайтах.
 
 
+## Резюме
 
-# Ответы на упражнения для размышления
+На этом уроке вы узнали: 
+* Как получить информацию о расположении вашей файловой системы и программном стеке ОС. 
+* Как найти справку по использованию команд. 
+* Как определить расположение файловой системы и тип двоичных файлов команд. 
+* Как найти и повторно использовать ранее выполненные команды. 
+
+В этом уроке обсуждались следующие команды: 
+
+`pwd`  
+Выведет путь к текущему рабочему каталогу. 
+
+`uname`  
+Выведет аппаратную архитектуру вашей системы, версию ядра Linux, дистрибутив и выпуск дистрибутива. 
+
+`man`  
+Получает доступ к файлам справки, описывающим использование команд. 
+
+`type`  
+Выведет расположение файловой системы и покажет одну или несколько команд. 
+
+`which`  
+Выведет расположение файловой системы для команды. 
+
+`history`  
+Выведет или повторно используйте команды, которые вы выполнили ранее.
+
+
+## Ответы на упражнения для закрепления
+
+**1. Используйте систему `man`, чтобы определить, как сообщить `apropos` о выводе краткой команды, чтобы она выводила только краткое сообщение об использовании, а затем завершила работу.**  
+Запустите `man apropos` и прокрутите раздел «Параметры» вниз, пока не дойдете до абзаца `--usage`.
+
+**2. Используйте систему `man`, чтобы определить, какая лицензия авторского права назначена команде `grep`.**  
+Запустите `man grep` и прокрутите вниз до раздела документа «Авторские права». Обратите внимание, что программа использует авторские права Free Software Foundation.
+
+## Ответы на упражнения для размышления
+
+**1. Определите аппаратную архитектуру и версию ядра Linux, используемую на вашем компьютере, в удобном для чтения формате вывода.**  
+Запустите `man uname`, прочтите раздел «Описание» и определите аргументы команды, которые будут отображать только точные результаты, которые вы хотите. Обратите внимание, как `-v` предоставит вам версию ядра, а `-i` предоставит аппаратную платформу.
+
+```console
+$ man uname
+$ uname -v
+$ uname -i
+```
+
+**2. Распечатайте последние двадцать строк базы данных динамической истории и файла `.bash_history`, чтобы сравнить их.**  
+
+```console
+$ history 20
+$ head -n 20 .bash_history
+```
+
+**3. Используйте инструмент `apropos`, чтобы определить страницу руководства, где вы найдете команду, которая вам понадобится для отображения размера подключенного физического блочного устройства в байтах, а не в мегабайтах или гигабайтах.**  
+Один из способов - запустить `apropos` со строковым блоком, прочитать результаты, отметить, что `lsblk` перечисляет блочные устройства (и, следовательно, будет наиболее вероятным инструментом для наших нужд), запустить `man lsblk`, прокрутить «Описание» и обратите внимание, что `-b` отображает размер устройства в байтах. Наконец, запустите `lsblk -b`, чтобы увидеть, что получится.
+
+```console
+$ apropos block
+$ man lsblk
+$ lsblk -b
+```
