Update 103.1 Lesson 2.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.1 Work on the command line/103.1 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.1 Work on the command line/103.1 Lesson 2.md
@@ -142,7 +142,7 @@ $ ls
 'my big file'
 ```
 
-Есть и другие способы добиться того же эффекта. Например, одинарные кавычки работают так же хорошо, как двойные кавычки. (Обратите внимание, что одинарные кавычки сохранят буквальное значение всех символов, а двойные кавычки сохранят все символы, кроме `$`, `\``, `\` и, в некоторых случаях, `!`.)
+Есть и другие способы добиться того же эффекта. Например, одинарные кавычки работают так же хорошо, как двойные кавычки. (Обратите внимание, что одинарные кавычки сохранят буквальное значение всех символов, а двойные кавычки сохранят все символы, кроме `$`, `/`, `\` и, в некоторых случаях, `!`.)
 
 ```console
 $ rm 'my big file'
