Update 103.1 Lesson 2.md

--- a/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.1 Work on the command line/103.1 Lesson 2.md
+++ b/LPIC-1 Exam 101/Topic 103: GNU and Unix Command/103.1 Work on the command line/103.1 Lesson 2.md
@@ -153,3 +153,68 @@ $ rm 'my big file'
 ```console
 $ touch my\ big\ file
 ```
+
+
+## Упражнения для закрепления
+
+1. Используйте команду `export`, чтобы добавить новый каталог к вашему пути (он не выдержит перезагрузки). 
+
+2. Используйте команду `unset`, чтобы удалить переменную `PATH`. Попробуйте запустить команду (например, `sudo cat /etc/shadow`) с помощью `sudo`. Что случилось? Почему? (Выход из оболочки вернет вас в исходное состояние.)
+
+
+## Упражнения на размышления
+
+1. Поищите в Интернете полный список специальных символов. 
+
+2. Попробуйте запускать команды, используя строки, состоящие из специальных символов, и различные способы их экранирования. Есть ли различия в поведении этих методов?
+
+
+## Резюме
+
+На этом уроке вы узнали: 
+* Как определить переменные среды вашей системы. 
+* Как создать свои собственные переменные среды и экспортировать их в другие оболочки. 
+* Как удалить переменные среды и как использовать команды `env` и `set`. 
+* Как экранировать специальные символы, чтобы Bash их буквально читал. 
+
+В этом уроке обсуждались следующие команды: 
+* `echo`  
+Распечатайте входные строки и переменные. 
+* `env`  
+Поймите и измените переменные среды. 
+* `export`  
+Передайте переменную среды дочерним оболочкам. 
+* `unset`  
+Сбросить значения и атрибуты переменных и функций оболочки.
+
+
+## Ответы на упражнения для закрепления
+
+**1. Используйте команду `export`, чтобы добавить новый каталог к вашему пути (он не выдержит перезагрузки).**  
+Вы можете временно добавить новый каталог (возможно, тот, который называется `myfiles`, который находится в вашем домашнем каталоге), к своему пути, используя `export PATH = "/home/yourname/myfiles: $PATH"`. Создайте простой сценарий в каталоге `myfiles/`, сделайте его исполняемым и попробуйте запустить его из другого каталога. Эти команды предполагают, что вы находитесь в своем домашнем каталоге, который содержит каталог с именем `myfiles`.
+```console
+$ touch myfiles/myscript.sh
+$ echo "#!/bin/bash" >> myfiles/myscript.sh
+$ echo "cat Hello" >> myfiles/myscript.sh
+$ chmod +x myfiles/myscript.sh
+$ myfiles.sh
+Hello
+```
+
+**2. Используйте команду `unset`, чтобы удалить переменную `PATH`. Попробуйте запустить команду (например, `sudo cat /etc/shadow`) с помощью `sudo`. Что случилось? Почему? (Выход из оболочки вернет вас в исходное состояние.)**  При вводе `unset PATH` будут удалены текущие настройки пути. Попытка вызвать двоичный файл без его абсолютного адреса потерпит неудачу. По этой причине попытка запустить команду с использованием `sudo` (которая сама по себе является двоичной программой, расположенной в `/usr/bin/sudo`) не удастся - если вы не укажете абсолютное местоположение, как в: `/usr/bin/sudo /bin/cat /etc/shadow`. Вы можете сбросить свой `PATH` с помощью экспорта или просто выйдя из оболочки.
+
+
+## Ответы на упражнения для размышления
+
+**1. Поищите в Интернете полный список специальных символов.**  
+Вот список: `& ; | * ? " ' [ ] ( ) $ < > { } # / \ ! ~`.
+
+**2. Попробуйте запускать команды, используя строки, состоящие из специальных символов, и различные способы их экранирования. Есть ли различия в поведении этих методов?**  
+Экранирование с использованием символов `"` сохранит специальные значения знака доллара, обратной косой черты и обратной косой черты. С другой стороны, экранирование с использованием символа `'` сделает все символы буквальными.
+
+```console
+$ echo "$mynewvar"
+goodbye
+$ echo '$mynewvar'
+$mynewvar
+```
